[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Backgrounds/blue.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/EnemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.25, 459.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource( 5 )]

[node name="Background" type="TextureRect" parent="."]
margin_right = 1082.0
margin_bottom = 721.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 93, 364 )

[node name="EnemySpawner" parent="." instance=ExtResource( 3 )]

[node name="DeathZone" type="Area2D" parent="."]
position = Vector2( -333, 341 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2( 212.25, 30 )
shape = SubResource( 1 )

[connection signal="tookDamage" from="Player" to="." method="_on_Player_tookDamage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_EnemySpawner_enemy_spawned"]
[connection signal="area_entered" from="DeathZone" to="." method="_on_DeathZone_area_entered"]

[editable path="Player"]
